# Academic-Affairs-System

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  playwright.config.ts  rulesync.jsonc  start-local-edu.command  停止本地教务工具.bat  启动本地教务工具.bat
apps/backend/: README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260403_0001_initial_schema.py  20260403_0003_workload_schema.py  (+32 more)
apps/backend/app/: __init__.py  desktop_entry.py  main.py
apps/backend/local_edu_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/backend/tests/: conftest.py  test_analytics_builders.py  test_analytics_metrics.py  test_api_m1.py  test_archive_and_system.py  test_auth_rbac.py  test_class_profiles.py  test_dashboard_profile_and_settings.py  test_data_health.py  test_evaluation_quant_workflow.py  test_exam_workflow.py  test_gaokao_api.py  test_gaokao_import_framework.py  test_gaokao_legacy_fk_safety.py  test_gaokao_materialize.py  test_gaokao_pathways.py  test_gaokao_profile_details.py  test_gaokao_score_projection.py  test_gaokao_scraper_bundle_import.py  test_grade_analytics_and_student_attachments.py  test_knowledge_v22.py  test_recommendation_exporters.py  test_recommendation_workflow.py  test_score_analytics.py  test_score_smart_import.py  test_shandong_rush_stable_safe_recommendation.py  test_student_analysis_report_v1.py  test_student_bulk_delete.py  test_student_class_transfer.py  test_student_events_adviser_dashboard.py  test_student_followup_dashboard.py  test_student_importer.py  test_student_planning.py  test_student_teacher_comments.py  test_volunteer_guide.py  test_volunteer_guide_art_unification.py  test_workload_workflow.py
(+627 files in other folders)
